Added baseline_person_40.xml Edited build.gradle.kts   -Change version 1.0 to 1.0.1 Edited DashboardFragment.java   -Operate with isLent variable Edited Database.java   -Changed database name "smoking_tracker_1" to "smoking_tracker" Edited History.java   -Added isLent variable Edited HistoryAdapter.java   -Added functionality for show/hide imageButton (isLent) Edited Manager.java   -Added isLent variable Edited Queries.java   -Added functionality for management variable isLent Edited strings.xml   -Added translation for image_button_is_lent and text_view_given_cigarette

--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -24,12 +24,14 @@
 
     <!--fragment_dashboard_table -->
     <string name="text_view_full_date_text">DD.MM.YYYY HH:SS</string>
+    <string name="image_button_is_lent">Ist verliehen?</string>
     <string name="image_button_edit_description">Eintrag bearbeiten</string>
     <string name="delete_record_description">Eintrag löschen</string>
 
     <!--fragment_dashboard_popup -->
     <string name="text_view_message_text">Sind Sie sicher, dass Sie diesen Eintrag löschen möchten?</string>
     <string name="text_view_message_text_1">Datum und Uhrzeit</string>
+    <string name="text_view_given_cigarette">Wurde diese Zigarette geliehen?</string>
     <string name="button_confirm">Bestätigen</string>
     <string name="button_close">Schließen</string>
 
